[tool.poetry]
name = "ardeche-flood"
version = "0.1.0"
description = ""
authors = ["tmp-croissant"]
readme = "README.md"

[tool.poetry.dependencies]
geopandas = "^0.13.0"
python = "^3.10"
rasterio = "^1.3.7"
rioxarray = "^0.14.1"
shapely = "^2.0.1"
xarray = "^2023.5.0"
pyflwdir = "^0.5.7"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
jupyter = "^1.0.0"
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
multi_line_output = 3
profile = "black"
